save working copy

--- a/client/main.html
+++ b/client/main.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-  <h1>Installation with surrounding service work</h1>
+  <h1>Installation/Service Mapping Project</h1>
   {{> getAddressForm}}
 
   {{> map}}
