revised client-side code for mongodb query

--- a/client/main.html
+++ b/client/main.html
@@ -9,7 +9,7 @@
   {{> map}}
 </body>
 
-<template name="hello">
+<template name="zonemap">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
