--- a/client/main.html
+++ b/client/main.html
@@ -3,15 +3,15 @@
 </head>
 
 <body>
-  <h1>Installation/Service Mapping Project</h1>
+  <h1>Zones Map Project</h1>
   {{> getAddressForm}}
-
+<!--  {{> plot_map}}  -->
   {{> map}}
+  {{> plot_map}}
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="zonemap">
+  <div>blah</div>
 </template>
 
 <template name="getAddressForm">
@@ -24,4 +24,10 @@
 
 <template name="map">
   <div id="map" class="map"></div>
+</template>
+
+<template name="plot_map">
+
+    <p>Latitiude: {{mapPin}}</p>
+
 </template>
